# qualia-circuitpython-dual_qrcode_wifi_webworkflow

./: boot_out.txt  code_dual_qrcode.py  pyproject.toml  settings.toml
lib/: adafruit_fakerequests.py  adafruit_focaltouch.py  adafruit_miniqr.py  simpleio.py
lib/adafruit_minimqtt/: adafruit_minimqtt.py
lib/adafruit_portalbase/: __init__.py  graphics.py  network.py  wifi_coprocessor.py  wifi_esp32s2.py
lib/adafruit_qualia/: __init__.py  graphics.py  network.py  peripherals.py
lib/adafruit_qualia/displays/: bar320x820.py
lib/adafruit_qualia/examples/: qualia_paint.py  qualia_qrcode_generation.py  qualia_quotes.py  qualia_simpletest.py
